updated docker images and tested gnomADv4.1

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,7 @@ params.REVELThreshold=-1
 params.reference="GRCh37"
 params.gnomADVersion="v2exome"
 params.casePopulation="NA"
-params.CoCoRVOptions=""
+params.CoCoRVOptions="NA"
 params.protocol="refGene,gnomad211_exome,revel"
 params.operation="g,f,f"
 params.addVEP="F"
@@ -17,7 +17,10 @@ params.VCFAnno="NA"
 params.toml="NA"
 params.caseAnnotatedVCFPrefix="NA"
 params.caseAnnotatedVCFSuffix="NA"
+params.variantExclude="NA"
 params.variantInclude="NA"
+params.batchSize=10000
+params.cpus=8 // for gds conversion
 
 profiles {
     local {
