--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,13 @@ params.caseAnnotatedVCFSuffix="NA"
 params.variantExclude="NA"
 params.variantInclude="NA"
 params.batchSize=10000
-params.cpus=8 // for gds conversion
+params.cpus=4 // for gds conversion
+params.caseGenotypeGDSPrefix="NA"
+params.caseGenotypeGDSSuffix="NA"
+params.caseAnnotationGDSPrefix="NA"
+params.caseAnnotationGDSSuffix="NA"
+params.topK=20
+params.caseControl="case"
 
 profiles {
     local {
