Added VEP options

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ params.annotationUsed="NA"
 params.highLDVariantFile="NA"
 params.pLDControl=0.05
 params.REVELThreshold=-1
-params.reference="GRCh37"
+params.build="GRCh37"
 params.gnomADVersion="v2exome"
 params.casePopulation="NA"
 params.CoCoRVOptions="NA"
@@ -27,6 +27,8 @@ params.caseAnnotationGDSPrefix="NA"
 params.caseAnnotationGDSSuffix="NA"
 params.topK=20
 params.caseControl="case"
+params.vepThreads=8
+params.groupColumn="Gene.refGene"
 
 profiles {
     local {
@@ -57,7 +59,7 @@ profiles {
         executor.queueSize = 1000
         process.queue = 'priority' // 'standard'
         process.clusterOptions = '-P cocorv'
-        process.memory = '64GB'
+        process.memory = '32GB'
         singularity.enabled = true
         singularity.cacheDir = '/research/rgs01/home/clusterHome/stithi/singularity-cache'
     }
