--- a/cloud-implementations/CAVATICA-SevenBridges/nextflow.config
+++ b/cloud-implementations/CAVATICA-SevenBridges/nextflow.config
@@ -15,6 +15,8 @@ params {
     VEPAnnotations="AM,SPLICEAI,CADD,LOFTEE"
     variantInclude="NA"
     batchSize=10000
+    topK=20
+    caseControl="case"
 }
 
 profiles {
