Updated Loftee options for VEP

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,6 +29,7 @@ params.topK=20
 params.caseControl="case"
 params.vepThreads=8
 params.groupColumn="Gene.refGene"
+params.CoCoRVFolder="/opt/cocorv/"
 
 profiles {
     local {
