--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,7 @@ params.CoCoRVOptions="NA"
 params.protocol="refGene,revel"
 params.operation="g,f"
 params.annotationTool="ANNOVAR"
-params.VEPAnnotations="AM,SPLICEAI"
+params.VEPAnnotations="AM,SPLICEAI,CADD,LOFTEE,REVEL"
 params.VCFAnno="NA"
 params.toml="NA"
 params.caseAnnotatedVCFPrefix="NA"
@@ -64,9 +64,8 @@ profiles {
         process.clusterOptions = '-P cocorv'
         process.memory = '32GB'
         singularity.enabled = true
-    }
-
-    
+        singularity.cacheDir = '/research/rgs01/home/clusterHome/stithi/singularity-cache'
+    }    
 
 }
 
